<resources>
    <string name="app_name">Note App</string>
    <string name="theme_title">Themes:</string>
    <string name="light_theme">Dark theme</string>
    <string name="dark_theme">Light theme</string>
    <string name="system_theme">Use system theme</string>
    <string name="battery_saver_theme">Battery saver theme</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="email_card_detail_transition_name">email_card_detail</string>
    <string name="email_card_transition_name">email_card_%1$s</string>

    <string name="email_sender_profile_content_desc">Profile image of sender</string>

    <string name="navigate_back_icon_content_desc">Navigate back</string>
    <string name="tansitionNameSearchBar">card_search_bar_transition</string>

</resources>