<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2019 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="note"
            type="com.example.daynightthem.nav.datasource.model.NoteInfo.Note" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/dimen_4dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:clipToPadding="false"
        android:background="?android:colorBackground"
        app:paddingTopSystemWindowInsets="@{true}">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_card_view"
            android:layout_width="match_parent"
            app:cardCornerRadius="0dp"
            android:layout_height="wrap_content"
            android:transitionName="@string/email_card_detail_transition_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_item_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_24dp"
                android:paddingBottom="@dimen/bottom_app_bar_height"
                app:paddingBottomSystemWindowInsets="@{true}">

                <TextView
                    android:id="@+id/subject_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    app:layout_constraintEnd_toStartOf="@+id/navigation_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{note.subject}"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    tools:text="High school reunion" />

                <ImageButton
                    android:id="@+id/navigation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_16dp"
                    app:layout_constraintEnd_toEndOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintTop_toTopOf="@+id/subject_text_view"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/navigate_back_icon_content_desc"
                    app:srcCompat="@drawable/ic_arrow_down" />

                <TextView
                    android:id="@+id/sender_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subject_text_view"
                    android:textAppearance="?attr/textAppearanceBody2"
                    tools:text="Ali Connors -- 12m" />

                <TextView
                    android:id="@+id/recipient_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_text_view"
                    android:textAppearance="?attr/textAppearanceCaption"
                     />

                <ImageView
                    android:id="@+id/sender_profile_image_view"
                    android:layout_width="@dimen/email_sender_profile_image_size"
                    android:layout_height="@dimen/email_sender_profile_image_size"
                    android:contentDescription="@string/email_sender_profile_content_desc"
                    android:scaleType="centerCrop"
                    app:glideCircularCrop="@{true}"
                    app:layout_constraintTop_toTopOf="@id/sender_text_view"
                    app:layout_constraintBottom_toBottomOf="@+id/recipient_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:src="@drawable/avatar_3" />

                <TextView
                    android:id="@+id/body_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_profile_image_view"
                    android:text="@{note.body}"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attachment_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:overScrollMode="never" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</layout>
